--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,11 +3,13 @@ unbind C-b
 set -g prefix C-Space
 bind C-Space send-prefix
 
-# move status bar on top
+# set statusbat
 set-option -g status-position top
+set-option -g status-style bg=yellow,fg=black
 
 # set vi mode
-set-window-option -g mode-keys vi
+setw -g mode-keys vi       # vi-style keys for copy mode
+set-option -g status-keys vi  # vi-style keys for command prompt and status line
 
 # open panes in a current directory
 bind '"' split-window -v -c "#{pane_current_path}"
