add more vi keys

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,3 +14,15 @@ set-option -g status-keys vi  # vi-style keys for command prompt and status line
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
+# enable vi-style pane navigation
+
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# enable fast resizing with shift + vi-style keys
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
